fix: fixing width on mobile mode

--- a/main.css
+++ b/main.css
@@ -551,9 +551,5 @@ html {
 }
 
 .bg-white-gradient {
-   background: linear-gradient(
-      181deg,
-      rgba(255, 255, 255, 0) -8.91%,
-      #fff 100.85%
-   );
+   background: linear-gradient(181deg, rgba(255, 255, 255, 0) 60%, #fff);
 }
